jquery-ui1.8.11改为1.8.13

--- a/jquery-layout/1.2.0/simple.html
+++ b/jquery-layout/1.2.0/simple.html
@@ -5,7 +5,7 @@
 	<title>Simple Layout Demo</title>
 
 	<script type="text/javascript" src="../../../ui-libs/jquery/1.5.1/jquery.min.js"></script>
-	<script type="text/javascript" src="../../../ui-libs/jquery-ui/1.8.11/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="../../../ui-libs/jquery-ui/1.8.13/ui/minified/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="../../../ui-libs/jquery-layout/1.2.0/jquery.layout.min.js"></script>
 
 	<script type="text/javascript">
