pnotify\1.0.2\pinesNotify.htm

--- a/jquery-ui/plugins/pnotify/1.0.2/pinesNotify.htm
+++ b/jquery-ui/plugins/pnotify/1.0.2/pinesNotify.htm
@@ -185,6 +185,8 @@
 		var credit_shown = false;
 
 		$(document).ready(function(){
+			$.pnotify.defaults.pnotify_delay = 2000;
+			$.pnotify.defaults.pnotify_history=false;
 			// This is how to change the default settings for the entire page.
 			//$.pnotify.defaults.pnotify_width = "400px";
 			// If you don't want new lines ("\n") automatically converted to breaks ("<br />")
