--- a/jquery/plugins/slidingtabs/1.1.4/horizontal.html
+++ b/jquery/plugins/slidingtabs/1.1.4/horizontal.html
@@ -4,11 +4,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Horizontal Demo - Sliding Tabs - jQuery Plugin</title>
-	<link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.0/themes/default/slidingtabs-horizontal.css" />   
+	<link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.4/themes/default/slidingtabs-horizontal.css" />   
 	<script type="text/javascript" src="../../../../../ui-libs/jquery/1.5.2/jquery.js"></script>
 	<script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/easing/1.3/jquery.easing.js"></script>
     <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/mousewheel/3.0.4/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.0/jquery.slidingtabs.min.js"></script>
+    <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.4/jquery.slidingtabs.js"></script>
 	<!-- JavaScript -->
 	<script type="text/javascript">  
 	  	$(document).ready(function() {
