--- a/jquery/plugins/slidingtabs/1.1.7/demo-and-docs.html
+++ b/jquery/plugins/slidingtabs/1.1.7/demo-and-docs.html
@@ -18,14 +18,14 @@
             div.tooltip {width:73px;}
         </style>
     <![endif]-->        
-    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-horizontal.min.css" />   
-    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-vertical.min.css" />   
+    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-horizontal.css" />   
+    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-vertical.css" />   
     
     <!-- JavaScript -->
 	<script type="text/javascript" src="../../../../../ui-libs/jquery/1.6.3/jquery.min.js"></script>
 	<script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/easing/1.3/jquery.easing.js"></script>
     <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/mousewheel/3.0.4/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/jquery.slidingtabs.demo.min.js"></script>
+    <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/jquery.slidingtabs.demo.js"></script>
     <script type="text/javascript">    	
 	$(document).ready(function() {
   				
