--- a/jquery/plugins/slidingtabs/1.1.7/external-linking-demo.html
+++ b/jquery/plugins/slidingtabs/1.1.7/external-linking-demo.html
@@ -15,14 +15,14 @@
 		div#ext_links a:hover, div.text a:hover { color:#fff; background-color:#363636; }
 		div#ext_links p { margin:0px; padding:10px 0 0; }
 	</style>
-    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-horizontal.min.css" />   
-    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-vertical.min.css" />   
+    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-horizontal.css" />   
+    <link rel="stylesheet" type="text/css" href="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/themes/default/slidingtabs-vertical.css" />   
     
     <!-- JavaScript -->
 	<script type="text/javascript" src="../../../../../ui-libs/jquery/1.6.3/jquery.min.js"></script>
 	<script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/easing/1.3/jquery.easing.js"></script>
     <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/mousewheel/3.0.4/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/jquery.slidingtabs.min.js"></script>
+    <script type="text/javascript" src="../../../../../ui-libs/jquery/plugins/slidingtabs/1.1.7/jquery.slidingtabs.js"></script>
     <script type="text/javascript">  
   	$(document).ready(function() {
   				
