--- a/hammer/1.0.4/jquery.html
+++ b/hammer/1.0.4/jquery.html
@@ -71,11 +71,9 @@
 
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="../dist/jquery.hammer.min.js"></script>
-
+<script type="text/javascript" src="../../../ui-libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.js"></script>
 <script>
-
     function highlight(el) {
         setTimeout(function() {
             el.className = el.className.replace("highlight", "");
@@ -108,6 +106,5 @@
     });
 
 </script>
-<script src="assets/js/ga.js"></script>
 </body>
 </html>
