--- a/hammer/1.0.4/no-jquery.html
+++ b/hammer/1.0.4/no-jquery.html
@@ -71,7 +71,7 @@
 
 </div>
 
-<script src="../dist/jquery.hammer.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.min.js"></script>
 
 <script>
 
@@ -99,6 +99,5 @@
     });
 
 </script>
-<script src="assets/js/ga.js"></script>
 </body>
 </html>
