--- a/hammer/1.0.4/pull-to-refresh.html
+++ b/hammer/1.0.4/pull-to-refresh.html
@@ -157,7 +157,7 @@
 </div>
 
 
-<script src="../dist/hammer.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/hammer.min.js"></script>
 <script src="assets/js/modernizr.js"></script>
 
 <script>
@@ -393,7 +393,5 @@
     };
 
 </script>
-<script src="assets/js/ga.js"></script>
-
 </body>
 </html>
