--- a/hammer/1.0.4/zepto.html
+++ b/hammer/1.0.4/zepto.html
@@ -76,8 +76,7 @@
 </div>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
-<script src="../dist/jquery.hammer.js"></script>
-
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.min.js"></script>
 <script>
 
     function highlight(el, classname) {
@@ -113,6 +112,5 @@
     });
 
 </script>
-<script src="assets/js/ga.js"></script>
 </body>
 </html>
