--- a/hammer/1.0.4/carousel.html
+++ b/hammer/1.0.4/carousel.html
@@ -100,10 +100,9 @@
 
 
     <!-- jQuery is just for the demo! Hammer.js works without jQuery :-) -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../ui-libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="assets/js/modernizr.js"></script>
-
-    <script src="../dist/jquery.hammer.js"></script>
+	<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.js"></script>
 
     <script>
 
