--- a/hammer/1.0.4/events.html
+++ b/hammer/1.0.4/events.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Hammer.js</title>
-    <script src="http://192.168.1.21:8080/target/target-script-min.js#anonymous"></script>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -173,11 +172,10 @@
 <pre id="event-log"></pre>
 
 <!-- jQuery is just for the demo! Hammer.js works without jQuery :-) -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="../dist/hammer.js"></script>
-<script src="../plugins/hammer.fakemultitouch.js"></script>
-<script src="../plugins/hammer.showtouches.js"></script>
-
+<script type="text/javascript" src="../../../ui-libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/hammer.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/plugins/hammer.fakemultitouch.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/plugins/hammer.showtouches.js"></script>
 
 <!--[if !IE]> -->
 <script>
