--- a/hammer/1.0.4/fastclick.html
+++ b/hammer/1.0.4/fastclick.html
@@ -24,8 +24,8 @@
 <a id="normal-click" class="btn btn-large" href="#">Normal click</a>
 
 <!-- jQuery is just for the demo! Hammer.js works without jQuery :-) -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="../dist/hammer.js"></script>
+<script type="text/javascript" src="../../../ui-libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/hammer.min.js"></script>
 
 <script>
 
@@ -77,6 +77,5 @@
 
 
 </script>
-<script src="assets/js/ga.js"></script>
 </body>
 </html>
