--- a/hammer/1.0.4/jquery.html
+++ b/hammer/1.0.4/jquery.html
@@ -72,7 +72,7 @@
 </div>
 
 <script type="text/javascript" src="../../../ui-libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.min.js"></script>
 <script>
     function highlight(el) {
         setTimeout(function() {
