--- a/hammer/1.0.4/pinchzoom.html
+++ b/hammer/1.0.4/pinchzoom.html
@@ -25,11 +25,10 @@
     </div>
 
     <!-- jQuery is just for the demo! Hammer.js works without jQuery :-) -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="../dist/hammer.js"></script>
-
-    <script src="../plugins/hammer.fakemultitouch.js"></script>
-    <script src="../plugins/hammer.showtouches.js"></script>
+<script type="text/javascript" src="../../../ui-libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/hammer.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/plugins/hammer.fakemultitouch.js"></script>
+<script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/plugins/hammer.showtouches.js"></script>
 
     <!--[if !IE]> -->
     <script>
@@ -94,6 +93,5 @@
 
 
     </script>
-    <script src="assets/js/ga.js"></script>
 </body>
 </html>
