--- a/hammer/1.0.4/zepto.html
+++ b/hammer/1.0.4/zepto.html
@@ -75,7 +75,7 @@
 
 </div>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+<script type="text/javascript" src="../../../ui-libs/zepto/1.0/zepto.min.js"></script>
 <script type="text/javascript" src="../../../ui-libs/hammer/1.0.4/jquery.hammer.min.js"></script>
 <script>
 
